syntax = "proto3";

option csharp_namespace = "HotelReservation.Api.Grpc";

package reservations;

service ReservationsService {
  rpc GetAllReservations (GetAllReservationsRequest) returns (GetAllReservationsResponse);
  
  rpc GetReservationById (GetReservationByIdRequest) returns (ReservationResponse);
  
  rpc GetReservationsByHotel (GetReservationsByHotelRequest) returns (GetAllReservationsResponse);
  
  rpc CreateReservation (CreateReservationRequest) returns (ReservationResponse);
}

message GetAllReservationsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message GetReservationByIdRequest {
  int32 id = 1;
}

message GetReservationsByHotelRequest {
  int32 hotel_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message CreateReservationRequest {
  int32 hotel_id = 1;
  int32 client_id = 2;
  int32 room_id = 3;
  string check_in_date = 4;   
  string check_out_date = 5;  
  double total_price = 6;
}

message GetAllReservationsResponse {
  repeated ReservationMessage items = 1;
  int32 total_count = 2;
}

message ReservationResponse {
  ReservationMessage reservation = 1;
}

message ReservationMessage {
  int32 id = 1;
  int32 hotel_id = 2;
  int32 client_id = 3;
  int32 room_id = 4;
  string check_in_date = 5;
  string check_out_date = 6;
  double total_price = 7;
  string status = 8;
  string created_at = 9;
}